enable other sensors

--- a/Sensors.conf
+++ b/Sensors.conf
@@ -1,14 +1,15 @@
 [Default]
 QAccelerometer=sensehat.accelerometer
-#QAmbientLightSensor=sensehat.als
 QCompass=sensehat.compass
 QMagnetometer=sensehat.magnetometer
+QGyroscope=sensehat.gyroscope
+QPressureSensor=sensehat.pressure
+QAmbientTemperatureSensor=sensehat.temperature
+
+#QAmbientLightSensor=sensehat.als
 #QOrientationSensor=sensehat.orientationsensor
 #QProximitySensor=sensehat.proximitysensor
 #QRotationSensor=sensehat.rotationsensor
 #QTapSensor=sensehat.tapsensor
 #QLightSensor=sensehat.lightsensor
 #QIRProximitySensor=sensehat.irproximitysensor
-#QGyroscope=sensehat.gyroscope
-QAmbientTemperatureSensor=sensehat.temperature
-
