enable rotation sensor

--- a/Sensors.conf
+++ b/Sensors.conf
@@ -5,11 +5,11 @@ QMagnetometer=sensehat.magnetometer
 QGyroscope=sensehat.gyroscope
 QPressureSensor=sensehat.pressure
 QAmbientTemperatureSensor=sensehat.temperature
+QRotationSensor=sensehat.rotationsensor
 
 #QAmbientLightSensor=sensehat.als
 #QOrientationSensor=sensehat.orientationsensor
 #QProximitySensor=sensehat.proximitysensor
-#QRotationSensor=sensehat.rotationsensor
 #QTapSensor=sensehat.tapsensor
 #QLightSensor=sensehat.lightsensor
 #QIRProximitySensor=sensehat.irproximitysensor
