--- a/Sensors.conf
+++ b/Sensors.conf
@@ -5,7 +5,7 @@ QMagnetometer=sensehat.magnetometer
 QGyroscope=sensehat.gyroscope
 QPressureSensor=sensehat.pressure
 QAmbientTemperatureSensor=sensehat.temperature
-QRotationSensor=sensehat.rotationsensor
+QRotationSensor=sensehat.rotation
 
 #QAmbientLightSensor=sensehat.als
 #QOrientationSensor=sensehat.orientationsensor
