--- a/Sensors.conf
+++ b/Sensors.conf
@@ -6,6 +6,7 @@ QGyroscope=sensehat.gyroscope
 QPressureSensor=sensehat.pressure
 QAmbientTemperatureSensor=sensehat.temperature
 QRotationSensor=sensehat.rotation
+QHumiditySensor=sensehat.humidity
 
 #QAmbientLightSensor=sensehat.als
 #QOrientationSensor=sensehat.orientationsensor
